--- a/flaskr/templates/graph.html
+++ b/flaskr/templates/graph.html
@@ -20,7 +20,7 @@ Analytics Graph
 </div>    
 
  <p id="para1" style="display: none;"> <!-- graphe montrant la pie -->
-    Ce graphe représente les vêlages occurants en pleine lune ou non. En effet, il peut être interessant de savoir si la pleine lune influence les naissances. Certaines périodes peuvent n'avoir aucune pleine lune, il est donc possible que le graph affiche à 100% des naissances en "Autre lunes". Dans ce cas, nous avons {{ data[0] }} naissances en pleine lune et {{ data[1] }} naissances en Autres Lunes. Vous pouvez vous référer au code couleur pour vous rendre compte des naissances.  
+    Ce graphe représente les vêlages occurents en pleine lune ou non. En effet, il peut être intéressant de savoir si la pleine lune influence les naissances. Certaines périodes peuvent n'avoir aucune pleine lune, il est donc possible que le graph affiche à 100% des naissances en "Autres lunes". Dans ce cas, nous avons {{ data[0] }} naissances en pleine lune et {{ data[1] }} naissances en Autres Lunes. Vous pouvez vous référer au code couleur pour vous rendre compte des naissances.  
 </p>
 
 <p id="para2" style="display: none;">
@@ -28,7 +28,7 @@ Analytics Graph
 </p>
 
 <p id="para3" style="display: none;">
-    Ce graphe représente le nombre de naissance sur une certaine période de temps. Dans ce cas-ci, cela se passe entre le {{ labels[0] }} et le {{ labels[-1] }}. Durant cette période, nous avons un total de {{ somme }} naissances . Il est interessant de voir que certains jours ont un plus grand nombre de naissances que d'autres. En effet, certains jours ne sont mêmes pas affichés alors que certains dans ce cas ci affiche jusqu'à {{ max }} naissances.  
+    Ce graphe représente le nombre de naissances sur une certaine période de temps. Dans ce cas-ci, cela se passe entre le {{ labels[0] }} et le {{ labels[-1] }}. Durant cette période, nous avons un total de {{ somme }} naissances . Il est interessant de voir que certains jours ont un plus grand nombre de naissances que d'autres. En effet, certains jours ne sont mêmes pas affichés alors que d'autres dans ce cas ci affichent jusqu'à {{ max }} naissances.  
 </p>
 
 
