added photos and comments in code

--- a/flaskr/templates/analytics.html
+++ b/flaskr/templates/analytics.html
@@ -207,7 +207,7 @@ La ferme des 3 chênes: Analytics
             <option value="">Sélectionner</option>
             <option value="moon">Pleine Lune</option>
             <option value="naissance">Vêlages</option>
-            <option value="races">Distribution des races</option>
+            <option value="races">Distribution des races</option> <!-- to do -->
         </select>
         </p>
         <br> <br>
