--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -324,7 +324,7 @@ nav ul .deroulant a
     left: auto;
 }
 
-#para1, #para2, #para3 {
+#para1, #para2, #para3, #para4 {
     text-align: justify;
     padding: 10%;
 }
