Applied Noah changes on the code to make it work. Added var in main.py to have nice date format and put them in graph.html, also fixed and cleaned some code to make the whole thing more reliable and friendly

--- a/flaskr/templates/graph.html
+++ b/flaskr/templates/graph.html
@@ -32,7 +32,7 @@ Analytics Graph
 </p>
 
 <p id="para3" style="display: none;">
-    Ce graphe représente le nombre de naissances sur une certaine période de temps. Dans ce cas-ci, cela se passe entre le {{ labels[0] }} et le {{ labels[-1] }}. Durant cette période, nous avons un total de {{ somme }} naissances . Il est interessant de voir que certains jours ont un plus grand nombre de naissances que d'autres. En effet, certains jours ne sont mêmes pas affichés alors que d'autres dans ce cas ci affichent jusqu'à {{ max }} naissances.  
+    Ce graphe représente le nombre de naissances sur une certaine période de temps. Dans ce cas-ci, cela se passe entre le {{ start_time }} et le {{ end_time }}. Durant cette période, nous avons un total de {{ somme }} naissances . Il est interessant de voir que certains jours ont un plus grand nombre de naissances que d'autres. En effet, certains jours ne sont mêmes pas affichés alors que d'autres dans ce cas ci affichent jusqu'à {{ max }} naissances.  
 </p>
 
 <p id="para4" style="display: none;">
