--- a/flaskr/templates/graph.html
+++ b/flaskr/templates/graph.html
@@ -24,19 +24,19 @@ Analytics Graph
 </div>  
 
  <p id="para1" style="display: none;"> <!-- graphe montrant la pie -->
-    Ce graphe représente les vêlages occurents en pleine lune ou non. En effet, il peut être intéressant de savoir si la pleine lune influence les naissances. Certaines périodes peuvent n'avoir aucune pleine lune, il est donc possible que le graph affiche à 100% des naissances en "Autres lunes". Dans ce cas, nous avons {{ data[0] }} naissances en pleine lune et {{ data[1] }} naissances en Autres Lunes. Vous pouvez vous référer au code couleur pour vous rendre compte des naissances.  
+    Ce graphe représente les vêlages occurents en pleine lune ou non. En effet, il peut être intéressant de savoir si la pleine lune influence les naissances. Certaines périodes peuvent n'avoir aucune pleine lune, il est donc possible que le graph affiche à 100% des naissances en "Autres lunes". Dans ce cas, nous avons {{ info_data["data"][0] }} naissances en pleine lune et {{ info_data["data"][1] }} naissances en Autres Lunes. Vous pouvez vous référer au code couleur pour vous rendre compte des naissances.  
 </p>
 
 <p id="para2" style="display: none;">
-    Nunc maximus placerat tellus, ut aliquam ligula semper a. Phasellus rhoncus augue odio, vel venenatis erat viverra nec. Vivamus lectus sapien, ultricies vitae vestibulum ac, accumsan id mauris. Donec sed turpis diam. Fusce commodo, urna vitae volutpat sodales, enim justo egestas eros, in tincidunt erat massa a nisl. Duis et mauris malesuada sapien dignissim interdum. Nulla laoreet at lacus ut tempus. Proin interdum porta mauris at sagittis. Aliquam nec lectus viverra ligula semper placerat. Proin ac tincidunt urna. Sed diam sapien, vehicula ut maximus et, sagittis non ligula. Suspendisse feugiat augue sit amet lectus elementum volutpat. Pellentesque fermentum massa vel neque mollis, a hendrerit lorem posuere. Morbi sapien elit, euismod ac lobortis vitae, faucibus et velit. Sed congue porttitor faucibus. Nam sem odio, dictum a erat id, ornare consequat dolor.
+    Nunc maximus placerat tellus, ut aliquam ligula semper a. Phasellus rhoncus augue odio, vel venenatis erat viverra nec. Vivamus lectus sapien, ultricies vitae vestibulum ac, accumsan id mauris. 
 </p>
 
 <p id="para3" style="display: none;">
-    Ce graphe représente le nombre de naissances sur une certaine période de temps. Dans ce cas-ci, cela se passe entre le {{ start_time }} et le {{ end_time }}. Durant cette période, nous avons un total de {{ somme }} naissances . Il est interessant de voir que certains jours ont un plus grand nombre de naissances que d'autres. En effet, certains jours ne sont mêmes pas affichés alors que d'autres dans ce cas ci affichent jusqu'à {{ max }} naissances.  
+    Ce graphe représente le nombre de naissances sur une certaine période de temps. Dans ce cas-ci, cela se passe entre le {{ info_data["start_time"] }} et le {{ info_data["end_time"] }}. Durant cette période, nous avons un total de {{ info_data["somme"] }} naissances . Il est interessant de voir que certains jours ont un plus grand nombre de naissances que d'autres. En effet, certains jours ne sont mêmes pas affichés alors que d'autres dans ce cas ci affichent jusqu'à {{ info_data["maximum"] }} naissances.  
 </p>
 
 <p id="para4" style="display: none;">
-    Ce graphe représente le nombre de femelles et de males dans la ferme depuis la création de celle-ci. Ce simple graphe permet facilement de se faire une idée de la répartition des sexes qu'il y a / qu'il y a eu dans la ferme. Dans ce cas-ci, nous avons {{ somme }} animaux évalués, contenant {{ data[0] }} femelles et {{ data[1] }} mâles. 
+    Ce graphe représente le nombre de femelles et de males dans la ferme depuis la création de celle-ci. Ce simple graphe permet facilement de se faire une idée de la répartition des sexes qu'il y a / qu'il y a eu dans la ferme. Dans ce cas-ci, nous avons {{ info_data["somme"] }} animaux évalués, contenant {{ info_data["data"][0] }} femelles et {{ info_data["data"][1] }} mâles. 
 </p>
 
 
@@ -63,7 +63,7 @@ Analytics Graph
         data: {        // les données
             labels: [],
             datasets: [{
-                        backgroundColor: 'rgba(240, 240, 240, 0.9)',
+                        backgroundColor: {{ info_data["background"] | safe }},
                         label: 'Bar Graphics',
                         data: []
                     }]
@@ -116,7 +116,7 @@ Analytics Graph
             }
         );
 
-    updateChart('{{ type }}', '{{ main_label }}', {{ labels | safe }} , {{ data }});
+    updateChart('{{ info_data["graph"] }}', '{{ info_data["main_label"] }}', {{ info_data["labels"] | safe }} , {{ info_data["data"] }});
 
 
     function updateChart(type_chart, main_label, labels, data){ // cette fonction permet d'afficher un des trois graphes et d'afficher le parapgraphe correspondant.
