fixed bugs, added note when graph shows nothing, added families influence on moon phase :)

--- a/flaskr/templates/analytics.html
+++ b/flaskr/templates/analytics.html
@@ -250,7 +250,7 @@ La ferme des 3 chênes: Analytics
 </form>
 
 {% if no_graph == True %}
-    <h5 style="color: red;"><i>Il n'y a pas de résultat pour ce graphe, essayez avec d'autres paramêtres!</i></h5>
+    <h5 style="color: red; text-align: center;"><i>Il n'y a pas de résultat pour ce graphe, essayez avec d'autres paramêtres!</i></h5>
 {% endif %}
 
 <script type="text/javascript">
